@@ -37,6 +37,7 @@
 var firegpg = {
 	onLoad: function() {
 		cGmail.initSystem();
+        cGmail2.initSystem();
 
 		// initialization code
 		this.initialized = true;
@@ -81,5 +82,4 @@ var firegpg = {
 };
 
 window.addEventListener("load", function(e) { firegpg.onLoad(e); }, false);
-
 // vim:ai:noet:sw=4:ts=4:sts=4:tw=0:fenc=utf-8
